[metadata]
name = cakecmsutils
version = 0.0.1
author = Fabian Thomas
author_email = fabian@fabianthomas.de
description = Python scripts to interact with the CakeCMS API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fabian-thomas/cakecmsutils
project_urls =
    Bug Tracker = https://github.com/fabian-thomas/cakecmsutils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = cakecmsutils
install_requires =
    # cakecms
